--- a/classes/Lesson_1.ipynb
+++ b/classes/Lesson_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 1 - The Basics\n",
+    "# Lesson 1 - Background and Terminology\n",
     "\n",
     "Author: <a href='mailto:louwjlabuschagne@gmail.com'>louwjlabuschagne@gmail.com</a>"
    ]
@@ -12,27 +12,37 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "toc": true
    },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Terms,-concepts-and-background\" data-toc-modified-id=\"Terms,-concepts-and-background-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Terms, concepts and background</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-is-an-IDE,-and-why-it-doesn't-matter?\" data-toc-modified-id=\"What-is-an-IDE,-and-why-it-doesn't-matter?-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>What is an IDE, and why it doesn't matter?</a></span></li><li><span><a href=\"#Why-you-will-and-should-learn-multiple-languages-and-why-the-language-doesn't-matter\" data-toc-modified-id=\"Why-you-will-and-should-learn-multiple-languages-and-why-the-language-doesn't-matter-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Why you will and should learn multiple languages and why the language doesn't matter</a></span><ul class=\"toc-item\"><li><span><a href=\"#Python,-Java,-C,-C++,-JS\" data-toc-modified-id=\"Python,-Java,-C,-C++,-JS-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>Python, Java, C, C++, JS</a></span></li><li><span><a href=\"#Syntax-is-not-programming\" data-toc-modified-id=\"Syntax-is-not-programming-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>Syntax is not programming</a></span></li></ul></li><li><span><a href=\"#OOP---what-is-it-and-why-do-we-use-it\" data-toc-modified-id=\"OOP---what-is-it-and-why-do-we-use-it-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>OOP - what is it and why do we use it</a></span></li><li><span><a href=\"#Git-and-github-and-standing-on-the-shoulders-of-giants\" data-toc-modified-id=\"Git-and-github-and-standing-on-the-shoulders-of-giants-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Git and github and standing on the shoulders of giants</a></span></li><li><span><a href=\"#The-Oracle-JVM,-JDK-and-JRE\" data-toc-modified-id=\"The-Oracle-JVM,-JDK-and-JRE-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>The Oracle JVM, JDK and JRE</a></span></li><li><span><a href=\"#Why-Java-and-why-not-always-Java\" data-toc-modified-id=\"Why-Java-and-why-not-always-Java-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Why Java and why not always Java</a></span></li><li><span><a href=\"#Staying-Up-to-Date\" data-toc-modified-id=\"Staying-Up-to-Date-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Staying Up to Date</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://images.unsplash.com/photo-1489875347897-49f64b51c1f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Terms, concepts and background\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### What is an IDE, and why it doesn't matter?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "IDE, or Integrated Development Environment, is the GUI in which you program. This can have many flavours and usually programmers have their favorite that they go to. Most people use <a href='https://www.jetbrains.com/idea/'>Jetbrains' IntelliJ</a> or <a href='https://www.eclipse.org/downloads/packages/release/kepler/sr1/eclipse-ide-java-developers'>Eclips</a>. \n",
     "\n",
@@ -45,19 +55,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Why you will and should learn multiple languages and why the language doesn't matter"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Through your coding career you'll undoubtible learn more than just _one_ language. And you should! Learning different languages highlights strenghts and weaknesses of the various langauges and gives you a good understanding as to why people prefer one language over another for a specif task. \n",
     "\n",
@@ -66,18 +71,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Python, Java, C, C++, JS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Some of the common languages you'll encounter are: C/C++, Java, .NET/C#, Ruby, Python, PHP, Javascript. A small explanation is shown below taken from <a href='https://www.quora.com/What-are-the-pros-cons-and-uses-of-the-major-programming-languages-What-programming-language-should-I-learn-I-wanted-a-general-overview-of-what-certain-languages-are-used-for-what-is-good-or-bad-easy-hard-high-maintenance-or-low-maintenance'>this</a> blog post.\n",
     "\n",
@@ -106,18 +107,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Syntax is not programming"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "To reiterate: the language you are programming in, is not programming, rather it is just the syntax used to execute concepts. Below I show how to declare a variable and print out \"Hallo World\" in each of the languages above.\n",
     "\n",
@@ -208,19 +205,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### OOP - what is it and why do we use it"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "OOP - short for Object Orientated Programming, is a concept that you'll hear everyday the deeper you go into programming. It is a mindset of abstracting small logical blocs in a modular way to make reusing them easy. \n",
     "\n",
@@ -265,8 +257,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Git and github and standing on the shoulders of giants"
@@ -288,8 +279,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### The Oracle JVM, JDK and JRE"
@@ -313,8 +303,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Why Java and why not always Java"
@@ -333,141 +322,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Staying Up to Date"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Programming is a highly dynamic field. Every week there is something new that gets released. Sometimes it's a new version of a language, or an entirely new language, or an update to a core package of a language that changes everything. \n",
     "\n",
     "To be a succesful programmer you have to stay up to date with the trends and what new features come out. I recommend searching for a YouTube channel that speaks to you, a twitter handle or a sub-reddit that keeps you up to date with new features. As with learning new languages, being aware of new features gives you an understanding of what and why something is currenlty lacking and broadens your knowledge about a language and programming in general."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Programming in Java"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### General Concepts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ Variables\n",
-    "+ Variable Types, float, int, string, boolean\n",
-    "+ Constants\n",
-    "+ Functions\n",
-    "+ Classes\n",
-    "+ Hello World\n",
-    "+ Filenames and spaces\n",
-    "+ Mac, Unix and Windows - why \\*nix is best\n",
-    "+ GUI vs CLI\n",
-    "+ Flow Diagrams - the actual programming language - draw.io\n",
-    "+ If statements\n",
-    "+ For and While loops\n",
-    "+ Commenting code and test-driven development"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Enough talk, let's program."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-15T12:39+0000",
-     "start_time": "2020-02-15T12:39:54.350Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hallo world\n"
-     ]
-    }
-   ],
-   "source": [
-    "System.out.println(\"hallo world\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Built-in Data Types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Integers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Floats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Booleans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Libraries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Type Conversion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Additional"
    ]
   }
  ],
@@ -493,7 +359,7 @@
    "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
